--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Hanzala11a 
+  h1 this shoud be the last version of this code 
   p Select your train below to see its current schedule.
   #the quick brown fox jumps over the lazy dog
     #trainList
