--- a/views/index.jade
+++ b/views/index.jade
@@ -1,13 +1,2 @@
-extends layout
-The quick branch fox jumps over the lazy dog
-block content
-  ha1 I am gonna win In Sha Allah 
-  p Select your train below to see its current schedule.
-  #the quick brown fox jumps over the lazy dog
-    #trainList
-      h2 Trains
-      #trains.d-flex.flex-row
-    #trainInfo
-      the quick brown fox strong  <span id='trainName'></span>
-      #trainSchedule
-        strong Select a train to view its current schedule.
+
+now I am able to use git comprehinsivley
